src/pages/C.css
.filterList {
  background-color: gray;
  position: absolute;
  top: 10%;
  left: 42%;
  z-index: 1;
  width: 325px;
}

.list {
  position: relative;
}

.searchBackground {
  background-color: beige;
  top: 20%;
  position: absolute;
  z-index: 1;
}

.searchResult {
  background-color: pink;
  display: flex;
}

.flex-grid {
  display: flex;
}
.col {
  flex: 1;
}

.card {
  border: 1px solid #fff;
  background: black;
  border-radius: 8px;
  width: 200px;
  height: 400px;
  color: black;
}

.holder {
  display: flex;
  flex-wrap: wrap;
}

